big_data_on_kubernetes/chapter3/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jokeapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jokeapi 
  template:
    metadata:
      labels:
        app: jokeapi
    spec:
      containers:
      - name: jokeapi
        image: us-central1-docker.pkg.dev/genotools/jokeapi-repo/jokeapi:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
