big_data_on_kubernetes/chapter3/service_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: jokeapi
spec:
  selector:
    app: jokeapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8087
